implement contact and download sections

--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,54 @@
   <nav class="nav">
     <a href="#top" class="nav__logo">start bootstrap</a>
     <button type="button" class="nav__hamburger" id="hamburgerBtn"></button>
-    <ul class="nav__ul" id="navList">
+    <ul class="nav__ul page__text--gray" id="navList">
       <li><a href="#" class="nav__li">ABOUT</a></li>
       <li><a href="#" class="nav__li">SERVICES</a></li>
       <li><a href="#" class="nav__li">PORTFOLIO</a></li>
       <li><a href="#" class="nav__li">CONTACT</a></li>
     </ul>
   </nav>
-  <header class="header">
+  <header class="header page_section--center-text">
     <h1 class="page__title"><b>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</b></h1>
-    <p class="header__p">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just
+    <hr class="hr header__hr--extra-margin">
+    <p class="page__p page__text--normal-weight page__p--extra-margin">Start Bootstrap can help you build better
+      websites using the
+      Bootstrap CSS framework! Just
       download your
       template and start going, no strings attached!</p>
     <button type="button" class="page__button">find out more</button>
   </header>
+  <section class="section section--orange-background page_section--center-text">
+    <h2 class="page__title page__text--normal-weight">We've got what you need!</h2>
+    <hr class="hr section__hr--white">
+    <p class="page__p page__p--margin">Start Bootstrap has everything you need to get your new website up and running
+      in no time!
+      All of the templates
+      and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+    <button type="button" class="page__button page__button--white-background page__text--gray">get started!</button>
+  </section>
+  <section class="section section--gray-background page_section--center-text">
+    <h2 class="page__title page__title--extra-margin page__text--normal-weight">Free Download at Start Bootstrap!
+    </h2>
+    <button type="button" class="page__button page__button--white-background page__text--gray">download now!</button>
+  </section>
+  <section class="section page_section--center-text">
+    <h2 class="page__title page__title--extra-margin page__text--normal-weight page__text--gray ">Let's Get In Touch!</h2>
+    <hr class="hr">
+    <p class="page__p page__p--margin page__text--gray">Ready to start your next project with us? That's great! Give us
+      a call or send
+      us an email and we will get back to you as soon as possible!</p>
+    <div class="page__flex-container">
+      <div>
+        <i class="section__icon section__icon--phone"></i>
+        <p class="page__p page__text--gray">123-456-6789</p>
+      </div>
+      <div>
+        <i class="section__icon section__icon--email"></i>
+        <a class="section__email" href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+      </div>
+    </div>
+  </section>
 
 </body>
 
