--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,38 @@
       and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
     <button type="button" class="page__button page__button--white-background page__text--gray">get started!</button>
   </section>
+  <section class="section page_section--center-text">
+    <h2 class="page__title page__text--normal-weight page__text--gray">At Your Service</h2>
+    <hr class="hr">
+    <div class="page__flex-container">
+      <div>
+        <i class="section__icon section__icon--diamond section__icon--large "></i>
+        <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Sturdy Templates</h3>
+        <p class="page__p page__text--light-gray page__text--no-margin">Our templates are updated regularly so they
+          don't break.</p>
+      </div>
+      <div>
+        <i class="section__icon section__icon--plane section__icon--large "></i>
+        <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Ready to Ship</h3>
+        <p class="page__p page__text--light-gray page__text--no-margin">You can use this theme as is, or you can make
+          changes!</p>
+      </div>
+      <div>
+        <i class="section__icon section__icon--markup section__icon--large "></i>
+        <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Up to Date</h3>
+        <p class="page__p page__text--light-gray page__text--no-margin">We update dependencies to keep things fresh.
+        </p>
+      </div>
+      <div>
+        <i class="section__icon section__icon--heart section__icon--large "></i>
+        <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Made with Love</h3>
+        <p class="page__p page__text--light-gray page__text--no-margin">You have to make your websites with love these
+          days!
+        </p>
+      </div>
+    </div>
+
+  </section>
   <section class="section section--gray-background page_section--center-text">
     <h2 class="page__title page__title--extra-margin page__text--normal-weight">Free Download at Start Bootstrap!
     </h2>
