--- a/src/index.html
+++ b/src/index.html
@@ -13,65 +13,117 @@
 
 <body class="page">
   <nav class="nav">
-    <a href="#top" class="nav__logo">start bootstrap</a>
-    <button type="button" class="nav__hamburger" id="hamburgerBtn"></button>
-    <ul class="nav__ul page__text--gray" id="navList">
-      <li><a href="#" class="nav__li">ABOUT</a></li>
-      <li><a href="#" class="nav__li">SERVICES</a></li>
-      <li><a href="#" class="nav__li">PORTFOLIO</a></li>
-      <li><a href="#" class="nav__li">CONTACT</a></li>
-    </ul>
+    <div class="page__container-responsive nav__flex">
+      <a href="#top" class="nav__logo">start bootstrap</a>
+      <button type="button" class="nav__hamburger" id="hamburgerBtn"></button>
+      <ul class="nav__ul page__text--gray" id="navList">
+        <li><a href="#" class="nav__li">ABOUT</a></li>
+        <li><a href="#" class="nav__li">SERVICES</a></li>
+        <li><a href="#" class="nav__li">PORTFOLIO</a></li>
+        <li><a href="#" class="nav__li">CONTACT</a></li>
+      </ul>
+    </div>
   </nav>
   <header class="header page_section--center-text">
-    <h1 class="page__title"><b>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</b></h1>
-    <hr class="hr header__hr--extra-margin">
-    <p class="page__p page__text--normal-weight page__p--extra-margin">Start Bootstrap can help you build better
-      websites using the
-      Bootstrap CSS framework! Just
-      download your
-      template and start going, no strings attached!</p>
-    <button type="button" class="page__button">find out more</button>
+    <div class="page__container-responsive">
+      <h1 class="page__title"><b>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</b></h1>
+      <hr class="hr header__hr--extra-margin">
+      <p class="page__p page__p--faded page__text--normal-weight page__p--extra-margin">Start Bootstrap can help you
+        build better
+        websites using the
+        Bootstrap CSS framework! Just
+        download your
+        template and start going, no strings attached!</p>
+      <button type="button" class="page__button">find out more</button>
+    </div>
   </header>
   <section class="section section--orange-background page_section--center-text">
-    <h2 class="page__title page__text--normal-weight">We've got what you need!</h2>
-    <hr class="hr section__hr--white">
-    <p class="page__p page__p--margin">Start Bootstrap has everything you need to get your new website up and running
-      in no time!
-      All of the templates
-      and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-    <button type="button" class="page__button page__button--white-background page__text--gray">get started!</button>
+    <div class="page__container-responsive">
+      <h2 class="page__title page__text--normal-weight">We've got what you need!</h2>
+      <hr class="hr section__hr--white">
+      <p class="page__p page__p--faded page__p--margin">Start Bootstrap has everything you need to get your new website
+        up and running
+        in no time!
+        All of the templates
+        and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+      <button type="button" class="page__button page__button--white-background page__text--gray">get started!</button>
+    </div>
   </section>
   <section class="section page_section--center-text">
     <h2 class="page__title page__text--normal-weight page__text--gray">At Your Service</h2>
     <hr class="hr">
-    <div class="page__flex-container">
-      <div>
+    <div class="page__flex-container page__container-responsive">
+      <div class="service-box">
         <i class="section__icon section__icon--diamond section__icon--large "></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Sturdy Templates</h3>
-        <p class="page__p page__text--light-gray page__text--no-margin">Our templates are updated regularly so they
+        <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">Our templates are updated
+          regularly so they
           don't break.</p>
       </div>
-      <div>
+      <div class="service-box">
         <i class="section__icon section__icon--plane section__icon--large "></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Ready to Ship</h3>
-        <p class="page__p page__text--light-gray page__text--no-margin">You can use this theme as is, or you can make
+        <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">You can use this theme as is, or
+          you can make
           changes!</p>
       </div>
-      <div>
+      <div class="service-box">
         <i class="section__icon section__icon--markup section__icon--large "></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Up to Date</h3>
-        <p class="page__p page__text--light-gray page__text--no-margin">We update dependencies to keep things fresh.
+        <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">We update dependencies to keep
+          things fresh.
         </p>
       </div>
-      <div>
+      <div class="service-box">
         <i class="section__icon section__icon--heart section__icon--large "></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Made with Love</h3>
-        <p class="page__p page__text--light-gray page__text--no-margin">You have to make your websites with love these
+        <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">You have to make your websites
+          with love these
           days!
         </p>
       </div>
     </div>
 
+  </section>
+  <section>
+    <div class="page__flex-container page__flex-container--row">
+      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/1.jpg" alt="a table with tools on top of it">
+        <div class="image__overlay page_section--center-text">
+          <p class="image__overlay-category page__p--faded">CATEGORY</p>
+          <p class="image__overlay-name">Project Name</p>
+        </div>
+      </div>
+      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/2.jpg" alt="a table with books on top of it">
+        <div class="image__overlay page_section--center-text">
+          <p class="image__overlay-category page__p--faded">CATEGORY</p>
+          <p class="image__overlay-name">Project Name</p>
+        </div>
+      </div>
+      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/3.jpg" alt="two vintage cameras">
+        <div class="image__overlay page_section--center-text">
+          <p class="image__overlay-category page__p--faded">CATEGORY</p>
+          <p class="image__overlay-name">Project Name</p>
+        </div>
+      </div>
+      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/4.jpg" alt="kitchen frying pan and knifes with a cutting board">
+        <div class="image__overlay page_section--center-text">
+          <p class="image__overlay-category page__p--faded">CATEGORY</p>
+          <p class="image__overlay-name">Project Name</p>
+        </div>
+      </div>
+      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/5.jpg" alt="measurement tools">
+        <div class="image__overlay page_section--center-text">
+          <p class="image__overlay-category page__p--faded">CATEGORY</p>
+          <p class="image__overlay-name">Project Name</p>
+        </div>
+      </div>
+      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/6.jpg" alt="workshops tools">
+        <div class="image__overlay page_section--center-text">
+          <p class="image__overlay-category page__p--faded">CATEGORY</p>
+          <p class="image__overlay-name">Project Name</p>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="section section--gray-background page_section--center-text">
     <h2 class="page__title page__title--extra-margin page__text--normal-weight">Free Download at Start Bootstrap!
@@ -79,19 +131,24 @@
     <button type="button" class="page__button page__button--white-background page__text--gray">download now!</button>
   </section>
   <section class="section page_section--center-text">
-    <h2 class="page__title page__title--extra-margin page__text--normal-weight page__text--gray ">Let's Get In Touch!</h2>
-    <hr class="hr">
-    <p class="page__p page__p--margin page__text--gray">Ready to start your next project with us? That's great! Give us
-      a call or send
-      us an email and we will get back to you as soon as possible!</p>
-    <div class="page__flex-container">
-      <div>
-        <i class="section__icon section__icon--phone"></i>
-        <p class="page__p page__text--gray">123-456-6789</p>
-      </div>
-      <div>
-        <i class="section__icon section__icon--email"></i>
-        <a class="section__email" href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+    <div class="page__container-responsive">
+      <h2 class="page__title page__title--extra-margin page__text--normal-weight page__text--gray ">Let's Get In Touch!</h2>
+      <hr class="hr">
+      <p class="page__p page__p--faded page__p--extra-margin page__text--gray">Ready to start your next project with
+        us?
+        That's
+        great! Give us
+        a call or send
+        us an email and we will get back to you as soon as possible!</p>
+      <div class="page__flex-container">
+        <div>
+          <i class="section__icon section__icon--phone"></i>
+          <p class="page__p page__p--faded page__text--gray">123-456-6789</p>
+        </div>
+        <div>
+          <i class="section__icon section__icon--email"></i>
+          <a class="section__email" href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+        </div>
       </div>
     </div>
   </section>
