implement gallery lightbox using perfundo lightbox

--- a/src/index.html
+++ b/src/index.html
@@ -87,40 +87,122 @@
   </section>
   <section>
     <div class="page__flex-container page__flex-container--row">
-      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/1.jpg" alt="a table with tools on top of it">
-        <div class="image__overlay page_section--center-text">
-          <p class="image__overlay-category page__p--faded">CATEGORY</p>
-          <p class="image__overlay-name">Project Name</p>
+      <div class="page__flex-div page__flex-div--width">
+        <div class="perfundo js-perfundo">
+          <a class="perfundo__link js-perfundo-link" href="#perfundo-img1">
+            <img class="image--responsive" src="assets/1.jpg" alt="Demo image">
+            <div class="image__overlay page_section--center-text">
+              <p class="image__overlay-category page__p--faded">CATEGORY</p>
+              <p class="image__overlay-name">Project Name</p>
+            </div>
+          </a>
+          <div id="perfundo-img1" class="perfundo__overlay fadeIn js-perfundo-overlay">
+            <figure class="perfundo__content perfundo__figure">
+              <img src="assets/1.jpg" alt="Demo image">
+              <div class="perfundo__image" style="width: 800px; padding-top: 50%; background-image: url(assets/1.jpg);"></div>
+            </figure>
+            <a href="#perfundo-untarget" class="perfundo__close perfundo__control js-perfundo-close">Close</a>
+            <a class="perfundo__next perfundo__control js-perfundo-next" href="#perfundo-img2">Next</a>
+          </div>
         </div>
       </div>
-      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/2.jpg" alt="a table with books on top of it">
-        <div class="image__overlay page_section--center-text">
-          <p class="image__overlay-category page__p--faded">CATEGORY</p>
-          <p class="image__overlay-name">Project Name</p>
+      <div class="page__flex-div page__flex-div--width">
+        <div class="perfundo js-perfundo">
+          <a class="perfundo__link js-perfundo-link" href="#perfundo-img2">
+            <img class="image--responsive" src="assets/2.jpg" alt="Demo image">
+            <div class="image__overlay page_section--center-text">
+              <p class="image__overlay-category page__p--faded">CATEGORY</p>
+              <p class="image__overlay-name">Project Name</p>
+            </div>
+          </a>
+          <div id="perfundo-img2" class="perfundo__overlay fadeIn js-perfundo-overlay">
+            <figure class="perfundo__content perfundo__figure">
+              <img src="assets/2.jpg" alt="Demo image">
+              <div class="perfundo__image" style="width: 800px; padding-top: 50%; background-image: url(assets/2.jpg);"></div>
+            </figure>
+            <a href="#perfundo-untarget" class="perfundo__close perfundo__control js-perfundo-close">Close</a>
+            <a class="perfundo__next perfundo__control js-perfundo-next" href="#perfundo-img3">Next</a>
+            <a class="perfundo__prev perfundo__control js-perfundo-prev" href="#perfundo-img1">Prev</a>
+          </div>
         </div>
       </div>
-      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/3.jpg" alt="two vintage cameras">
-        <div class="image__overlay page_section--center-text">
-          <p class="image__overlay-category page__p--faded">CATEGORY</p>
-          <p class="image__overlay-name">Project Name</p>
+      <div class="page__flex-div page__flex-div--width">
+        <div class="perfundo js-perfundo">
+          <a class="perfundo__link js-perfundo-link" href="#perfundo-img3">
+            <img class="image--responsive" src="assets/3.jpg" alt="Demo image">
+            <div class="image__overlay page_section--center-text">
+              <p class="image__overlay-category page__p--faded">CATEGORY</p>
+              <p class="image__overlay-name">Project Name</p>
+            </div>
+          </a>
+          <div id="perfundo-img3" class="perfundo__overlay fadeIn js-perfundo-overlay">
+            <figure class="perfundo__content perfundo__figure">
+              <img src="assets/3.jpg" alt="Demo image">
+              <div class="perfundo__image" style="width: 800px; padding-top: 50%; background-image: url(assets/3.jpg);"></div>
+            </figure>
+            <a href="#perfundo-untarget" class="perfundo__close perfundo__control js-perfundo-close">Close</a>
+            <a class="perfundo__next perfundo__control js-perfundo-next" href="#perfundo-img4">Next</a>
+            <a class="perfundo__prev perfundo__control js-perfundo-prev" href="#perfundo-img2">Prev</a>
+          </div>
         </div>
       </div>
-      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/4.jpg" alt="kitchen frying pan and knifes with a cutting board">
-        <div class="image__overlay page_section--center-text">
-          <p class="image__overlay-category page__p--faded">CATEGORY</p>
-          <p class="image__overlay-name">Project Name</p>
+      <div class="page__flex-div page__flex-div--width">
+        <div class="perfundo js-perfundo">
+          <a class="perfundo__link js-perfundo-link" href="#perfundo-img4">
+            <img class="image--responsive" src="assets/4.jpg" alt="Demo image">
+            <div class="image__overlay page_section--center-text">
+              <p class="image__overlay-category page__p--faded">CATEGORY</p>
+              <p class="image__overlay-name">Project Name</p>
+            </div>
+          </a>
+          <div id="perfundo-img4" class="perfundo__overlay fadeIn js-perfundo-overlay">
+            <figure class="perfundo__content perfundo__figure">
+              <img src="assets/4.jpg" alt="Demo image">
+              <div class="perfundo__image" style="width: 800px; padding-top: 50%; background-image: url(assets/4.jpg);"></div>
+            </figure>
+            <a href="#perfundo-untarget" class="perfundo__close perfundo__control js-perfundo-close">Close</a>
+            <a class="perfundo__next perfundo__control js-perfundo-next" href="#perfundo-img5">Next</a>
+            <a class="perfundo__prev perfundo__control js-perfundo-prev" href="#perfundo-img3">Prev</a>
+          </div>
         </div>
       </div>
-      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/5.jpg" alt="measurement tools">
-        <div class="image__overlay page_section--center-text">
-          <p class="image__overlay-category page__p--faded">CATEGORY</p>
-          <p class="image__overlay-name">Project Name</p>
+      <div class="page__flex-div page__flex-div--width">
+        <div class="perfundo js-perfundo">
+          <a class="perfundo__link js-perfundo-link" href="#perfundo-img5">
+            <img class="image--responsive" src="assets/5.jpg" alt="Demo image">
+            <div class="image__overlay page_section--center-text">
+              <p class="image__overlay-category page__p--faded">CATEGORY</p>
+              <p class="image__overlay-name">Project Name</p>
+            </div>
+          </a>
+          <div id="perfundo-img5" class="perfundo__overlay fadeIn js-perfundo-overlay">
+            <figure class="perfundo__content perfundo__figure">
+              <img src="assets/5.jpg" alt="Demo image">
+              <div class="perfundo__image" style="width: 800px; padding-top: 50%; background-image: url(assets/5.jpg);"></div>
+            </figure>
+            <a href="#perfundo-untarget" class="perfundo__close perfundo__control js-perfundo-close">Close</a>
+            <a class="perfundo__next perfundo__control js-perfundo-next" href="#perfundo-img6">Next</a>
+            <a class="perfundo__prev perfundo__control js-perfundo-prev" href="#perfundo-img4">Prev</a>
+          </div>
         </div>
       </div>
-      <div class="page__flex-div page__flex-div--width"><img class="image--responsive" src="assets/6.jpg" alt="workshops tools">
-        <div class="image__overlay page_section--center-text">
-          <p class="image__overlay-category page__p--faded">CATEGORY</p>
-          <p class="image__overlay-name">Project Name</p>
+      <div class="page__flex-div page__flex-div--width">
+        <div class="perfundo js-perfundo">
+          <a class="perfundo__link js-perfundo-link" href="#perfundo-img6">
+            <img class="image--responsive" src="assets/6.jpg" alt="Demo image">
+            <div class="image__overlay page_section--center-text">
+              <p class="image__overlay-category page__p--faded">CATEGORY</p>
+              <p class="image__overlay-name">Project Name</p>
+            </div>
+          </a>
+          <div id="perfundo-img6" class="perfundo__overlay fadeIn js-perfundo-overlay">
+            <figure class="perfundo__content perfundo__figure">
+              <img src="assets/6.jpg" alt="Demo image">
+              <div class="perfundo__image" style="width: 800px; padding-top: 50%; background-image: url(assets/6.jpg);"></div>
+            </figure>
+            <a href="#perfundo-untarget" class="perfundo__close perfundo__control js-perfundo-close">Close</a>
+            <a class="perfundo__prev perfundo__control js-perfundo-prev" href="#perfundo-img4">Prev</a>
+          </div>
         </div>
       </div>
     </div>
