--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,12 @@
     </div>
   </nav>
   <header class="header page_section--center-text">
-    <div class="page__container-responsive">
-      <h1 class="page__title"><b>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</b></h1>
+    <div class="page__container-responsive page__container-responsive--67">
+      <h1 class="page__title page__title--larger page__container-responsive--86"><b>YOUR FAVORITE SOURCE OF FREE
+          BOOTSTRAP THEMES</b></h1>
       <hr class="hr header__hr--extra-margin">
-      <p class="page__p page__p--faded page__text--normal-weight page__p--extra-margin">Start Bootstrap can help you
+      <p class="page__p page__p--faded page__text--normal-weight page__p--extra-margin page__p--large-header page__container-responsive--67">Start
+        Bootstrap can help you
         build better
         websites using the
         Bootstrap CSS framework! Just
@@ -38,10 +40,11 @@
     </div>
   </header>
   <section class="section section--orange-background page_section--center-text">
-    <div class="page__container-responsive">
+    <div class="page__container-responsive page__container-responsive--67">
       <h2 class="page__title page__text--normal-weight">We've got what you need!</h2>
       <hr class="hr section__hr--white">
-      <p class="page__p page__p--faded page__p--margin">Start Bootstrap has everything you need to get your new website
+      <p class="page__p page__p--faded page__p--margin page__container-responsive--67">Start Bootstrap has everything
+        you need to get your new website
         up and running
         in no time!
         All of the templates
@@ -52,7 +55,7 @@
   <section class="section page_section--center-text">
     <h2 class="page__title page__text--normal-weight page__text--gray">At Your Service</h2>
     <hr class="hr">
-    <div class="page__flex-container page__container-responsive">
+    <div class="page__flex-container page__container-responsive page__flex-container--row">
       <div class="service-box">
         <i class="section__icon section__icon--diamond section__icon--large "></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Sturdy Templates</h3>
@@ -213,21 +216,22 @@
     <button type="button" class="page__button page__button--white-background page__text--gray">download now!</button>
   </section>
   <section class="section page_section--center-text">
-    <div class="page__container-responsive">
+    <div class="page__container-responsive page__container-responsive--67">
       <h2 class="page__title page__title--extra-margin page__text--normal-weight page__text--gray ">Let's Get In Touch!</h2>
       <hr class="hr">
-      <p class="page__p page__p--faded page__p--extra-margin page__text--gray">Ready to start your next project with
+      <p class="page__p page__p--faded page__p--extra-margin page__text--gray page__container-responsive--67">Ready to
+        start your next project with
         us?
         That's
         great! Give us
         a call or send
         us an email and we will get back to you as soon as possible!</p>
-      <div class="page__flex-container">
-        <div>
+      <div class="page__flex-container page__container-responsive--67 page__container-responsive--align-start page__flex-container--lg">
+        <div class="icon-container">
           <i class="section__icon section__icon--phone"></i>
           <p class="page__p page__p--faded page__text--gray">123-456-6789</p>
         </div>
-        <div>
+        <div class="icon-container">
           <i class="section__icon section__icon--email"></i>
           <a class="section__email" href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
         </div>
