implement navigation bar style changing behaviour

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body class="page">
-  <nav class="nav">
+  <nav class="nav nav--no-background ">
     <div class="page__container-responsive nav__flex">
-      <a href="#top" class="nav__logo">start bootstrap</a>
+      <a href="#top" class="nav__logo nav__logo--no-color">start bootstrap</a>
       <button type="button" class="nav__hamburger" id="hamburgerBtn"></button>
       <ul class="nav__ul page__text--gray" id="navList">
-        <li><a href="#" class="nav__li">ABOUT</a></li>
-        <li><a href="#" class="nav__li">SERVICES</a></li>
-        <li><a href="#" class="nav__li">PORTFOLIO</a></li>
-        <li><a href="#" class="nav__li">CONTACT</a></li>
+        <li><a href="#" class="nav__li nav__li--no-color">ABOUT</a></li>
+        <li><a href="#" class="nav__li nav__li--no-color">SERVICES</a></li>
+        <li><a href="#" class="nav__li nav__li--no-color">PORTFOLIO</a></li>
+        <li><a href="#" class="nav__li nav__li--no-color">CONTACT</a></li>
       </ul>
     </div>
   </nav>
