implement smooth scrolling and it's polyfill

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
       <a href="#top" class="nav__logo nav__logo--no-color">start bootstrap</a>
       <button type="button" class="nav__hamburger" id="hamburgerBtn"></button>
       <ul class="nav__ul page__text--gray" id="navList">
-        <li><a href="#" class="nav__li nav__li--no-color">ABOUT</a></li>
-        <li><a href="#" class="nav__li nav__li--no-color">SERVICES</a></li>
-        <li><a href="#" class="nav__li nav__li--no-color">PORTFOLIO</a></li>
-        <li><a href="#" class="nav__li nav__li--no-color">CONTACT</a></li>
+        <li><a href="#about" class="nav__li nav__li--no-color">ABOUT</a></li>
+        <li><a href="#services" class="nav__li nav__li--no-color">SERVICES</a></li>
+        <li><a href="#portfolio" class="nav__li nav__li--no-color">PORTFOLIO</a></li>
+        <li><a href="#contact" class="nav__li nav__li--no-color">CONTACT</a></li>
       </ul>
     </div>
   </nav>
@@ -39,7 +39,7 @@
       <button type="button" class="page__button">find out more</button>
     </div>
   </header>
-  <section class="section section--orange-background page_section--center-text">
+  <section class="section section--orange-background page_section--center-text" id="about">
     <div class="page__container-responsive page__container-responsive--67">
       <h2 class="page__title page__text--normal-weight">We've got what you need!</h2>
       <hr class="hr section__hr--white">
@@ -52,7 +52,7 @@
       <button type="button" class="page__button page__button--white-background page__text--gray">get started!</button>
     </div>
   </section>
-  <section class="section page_section--center-text">
+  <section class="section page_section--center-text" id="services">
     <h2 class="page__title page__text--normal-weight page__text--gray">At Your Service</h2>
     <hr class="hr">
     <div class="page__flex-container page__container-responsive page__flex-container--row">
@@ -88,7 +88,7 @@
     </div>
 
   </section>
-  <section>
+  <section id="portfolio">
     <div class="page__flex-container page__flex-container--row">
       <div class="page__flex-div page__flex-div--width">
         <div class="perfundo js-perfundo">
@@ -215,7 +215,7 @@
     </h2>
     <button type="button" class="page__button page__button--white-background page__text--gray">download now!</button>
   </section>
-  <section class="section page_section--center-text">
+  <section class="section page_section--center-text" id="contact">
     <div class="page__container-responsive page__container-responsive--67">
       <h2 class="page__title page__title--extra-margin page__text--normal-weight page__text--gray ">Let's Get In Touch!</h2>
       <hr class="hr">
