--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     </div>
   </nav>
   <header class="header page_section--center-text">
-    <div class="page__container-responsive page__container-responsive--67">
+    <div class="page__container-responsive page__container-responsive--67 section--extra-margin">
       <h1 class="page__title page__title--larger page__container-responsive--86"><b>YOUR FAVORITE SOURCE OF FREE
           BOOTSTRAP THEMES</b></h1>
       <hr class="hr header__hr--extra-margin">
@@ -36,7 +36,7 @@
         Bootstrap CSS framework! Just
         download your
         template and start going, no strings attached!</p>
-      <button type="button" class="page__button">find out more</button>
+      <button type="button" class="page__button"><a href="#about" class="button__a">find out more</a></button>
     </div>
   </header>
   <section class="section section--orange-background page_section--center-text" id="about">
@@ -49,7 +49,9 @@
         in no time!
         All of the templates
         and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-      <button type="button" class="page__button page__button--white-background page__text--gray">get started!</button>
+      <button type="button" class="page__button page__button--white-background page__text--gray hidden"><a href="#services"
+          class="button__a page__text--gray">get
+          started!</a></button>
     </div>
   </section>
   <section class="section page_section--center-text" id="services">
@@ -57,28 +59,28 @@
     <hr class="hr">
     <div class="page__flex-container page__container-responsive page__flex-container--row">
       <div class="service-box">
-        <i class="section__icon section__icon--diamond section__icon--large "></i>
+        <i class="section__icon section__icon--diamond section__icon--large hidden"></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Sturdy Templates</h3>
         <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">Our templates are updated
           regularly so they
           don't break.</p>
       </div>
       <div class="service-box">
-        <i class="section__icon section__icon--plane section__icon--large "></i>
+        <i class="section__icon section__icon--plane section__icon--large hidden"></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Ready to Ship</h3>
         <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">You can use this theme as is, or
           you can make
           changes!</p>
       </div>
       <div class="service-box">
-        <i class="section__icon section__icon--markup section__icon--large "></i>
+        <i class="section__icon section__icon--markup section__icon--large hidden"></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Up to Date</h3>
         <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">We update dependencies to keep
           things fresh.
         </p>
       </div>
       <div class="service-box">
-        <i class="section__icon section__icon--heart section__icon--large "></i>
+        <i class="section__icon section__icon--heart section__icon--large hidden"></i>
         <h3 class="page__title page__title--smaller page__text--normal-weight page__text--gray">Made with Love</h3>
         <p class="page__p page__p--faded page__text--light-gray page__text--no-margin">You have to make your websites
           with love these
@@ -213,13 +215,14 @@
   <section class="section section--gray-background page_section--center-text">
     <h2 class="page__title page__title--extra-margin page__text--normal-weight">Free Download at Start Bootstrap!
     </h2>
-    <button type="button" class="page__button page__button--white-background page__text--gray">download now!</button>
+    <button type="button" class="page__button page__button--white-background page__text--gray hidden"><a href="#" class="button__a page__text--gray">DOWNLOAD
+        NOW!</a></button>
   </section>
   <section class="section page_section--center-text" id="contact">
     <div class="page__container-responsive page__container-responsive--67">
       <h2 class="page__title page__title--extra-margin page__text--normal-weight page__text--gray ">Let's Get In Touch!</h2>
       <hr class="hr">
-      <p class="page__p page__p--faded page__p--extra-margin page__text--gray page__container-responsive--67">Ready to
+      <p class="page__p page__p--extra-margin page__text--gray page__container-responsive--67">Ready to
         start your next project with
         us?
         That's
@@ -228,11 +231,11 @@
         us an email and we will get back to you as soon as possible!</p>
       <div class="page__flex-container page__container-responsive--67 page__container-responsive--align-start page__flex-container--lg">
         <div class="icon-container">
-          <i class="section__icon section__icon--phone"></i>
-          <p class="page__p page__p--faded page__text--gray">123-456-6789</p>
+          <i class="section__icon section__icon--phone hidden"></i>
+          <p class="page__p page__text--gray">123-456-6789</p>
         </div>
         <div class="icon-container">
-          <i class="section__icon section__icon--email"></i>
+          <i class="section__icon section__icon--email hidden"></i>
           <a class="section__email" href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
         </div>
       </div>
