add page description HTML meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="Description" content="a mobile-first implementation of a basic bootstrap-powered landing page without using bootstrap">
   <title>Home | Orange</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
