fix a bug where navigation buttons didn't work at all on firefox

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         Bootstrap CSS framework! Just
         download your
         template and start going, no strings attached!</p>
-      <button type="button" class="page__button"><a href="#about" class="button__a">find out more</a></button>
+      <a href="#about" class="button__a page__button">find out more</a>
     </div>
   </header>
   <section class="section section--orange-background page_section--center-text" id="about">
@@ -50,9 +50,8 @@
         in no time!
         All of the templates
         and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-      <button type="button" class="page__button page__button--white-background page__text--gray hidden"><a href="#services"
-          class="button__a page__text--gray">get
-          started!</a></button>
+      <a href="#services" class="button__a page__text--gray page__button page__button--white-background hidden">get
+        started!</a>
     </div>
   </section>
   <section class="section page_section--center-text" id="services">
@@ -216,8 +215,8 @@
   <section class="section section--gray-background page_section--center-text">
     <h2 class="page__title page__title--extra-margin page__text--normal-weight">Free Download at Start Bootstrap!
     </h2>
-    <button type="button" class="page__button page__button--white-background page__text--gray hidden"><a href="#" class="button__a page__text--gray">DOWNLOAD
-        NOW!</a></button>
+    <a href="#" class="button__a page__text--gray page__button page__button--white-background hidden">DOWNLOAD
+      NOW!</a>
   </section>
   <section class="section page_section--center-text" id="contact">
     <div class="page__container-responsive page__container-responsive--67">
